Ajout de l'interface des résultats
Ajout de l'interface des résultats, suppression des fichiers inutiles et
ajout de lignes pour inclure les fichiers dans le package DB
correctement dans le projet.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,8 @@
     <string name="pirates">Pirates</string>
     <string name="ninjas">Ninjas</string>
     <string name="No">#</string>
+    <string name="period">Period:#</string>
+    <string name="next_period">Next Period</string>
+    <string name="add_goal">Add Goal</string>
     
 </resources>
